<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_dang_nhap"
        android:layout_centerInParent="true"
        android:padding="20dp"
        >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/foodytext"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />
        <EditText
            android:id="@+id/edtEmailDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="#efeeee"
            android:maxLines="1"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:drawableLeft="@drawable/ic_perm_identity"
            android:drawablePadding="10dp"
            />
        <EditText
            android:id="@+id/edtMatKhauDN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mat_khau"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:textColorHint="#efeeee"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:drawablePadding="10dp"
            />
        <Button
            android:id="@+id/btnDangNhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dang_nhap"
            android:layout_marginTop="20dp"
            android:background="@drawable/raidius_button"
            android:padding="20dp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:gravity="center_vertical|center_horizontal"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            >
            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="2dp"
                android:background="#FFFFFF"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hoặc"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="#FFFFFF"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btnDangNhapFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#189aca"
            android:drawableLeft="@drawable/icon_facebook"
            android:paddingLeft="10dp"
            android:text="@string/dang_nhap_facebook"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            />

        <Button
            android:id="@+id/btnDangNhapGoogle"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:drawableLeft="@drawable/icon_google"
            android:text="@string/dang_nhap_google"
            android:textColor="#FFFFFF"
            android:paddingLeft="10dp"
            android:textAllCaps="false"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/txtQuenMatKhau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quen_mat_khau"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:textSize="15sp"
        />
    <TextView
        android:id="@+id/txtDangKy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dang_ky"
        android:layout_alignParentBottom="true"
        android:textColor="#FFFFFF"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:textSize="15sp"
        />
</RelativeLayout>
