<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_dang_nhap"
        android:layout_centerInParent="true"
        android:padding="20dp"
        >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/foodytext"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />
        <EditText
            android:id="@+id/edtEmailDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:textColorHint="#efeeee"
            android:maxLines="1"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:drawableLeft="@drawable/ic_perm_identity"
            android:drawablePadding="10dp"
            />
        <EditText
            android:id="@+id/edtMatKhauDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mat_khau"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:textColorHint="#efeeee"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:drawablePadding="10dp"
            />
        <EditText
            android:id="@+id/edtNhapLaiMatKhauDK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nhap_lai_mat_khau"
            android:maxLines="1"
            android:layout_marginTop="10dp"
            android:textColorHint="#efeeee"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_outline"
            android:drawablePadding="10dp"
            />
        <Button
            android:id="@+id/btnDangKy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dang_ky"
            android:layout_marginTop="20dp"
            android:background="@drawable/raidius_button"
            android:padding="20dp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:gravity="center_vertical|center_horizontal"
            />
    </LinearLayout>

</RelativeLayout>
