<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background_dang_nhap"
        android:layout_centerInParent="true"
        android:padding="20dp"
        >
        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/foodytext"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />
        <EditText
            android:id="@+id/edtEmailQMK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_can_khoi_phuc"
            android:textColorHint="#efeeee"
            android:maxLines="1"
            android:backgroundTint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            />

        <Button
            android:id="@+id/btnGui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gui_quen_mat_khau"
            android:layout_marginTop="20dp"
            android:background="@drawable/raidius_button"
            android:padding="20dp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:gravity="center_vertical|center_horizontal"
            />
        <TextView
            android:id="@+id/txtThanhVien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thanh_vien"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            />
    </LinearLayout>

</RelativeLayout>
